# immich-cross-account-mover

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.example.yml  pyproject.toml
.github/workflows/: release.yml
src/immich_cross_account_mover/: __main__.py  config.py  immich_client.py  mover.py  poller.py
tests/: test_cli.py  test_config.py  test_immich_client_albums.py  test_immich_client_assets_read.py  test_immich_client_assets_write.py  test_immich_client_core.py  test_mover.py  test_poller.py  test_smoke.py
